
* GITHUB#13285: Early terminate graph searches of AbstractVectorSimilarityQuery to follow timeout set from
  IndexSearcher#setTimeout(QueryTimeout). (Kaival Parikh)
  
* GITHUB#13633: Add ability to read/write knn vector values to a MemoryIndex. (Ben Trent)

* GITHUB#12627: patch HNSW graphs to improve reachability of all nodes from entry points

Optimizations
---------------------

* GITHUB#13439: Avoid unnecessary memory allocation in PackedLongValues#Iterator. (Zhang Chao)

* GITHUB##13425: Rewrite SortedNumericDocValuesRangeQuery to MatchNoDocsQuery when the upper bound is smaller than the
  lower bound. (Ioana Tagirta)

* GITHUB#13322: Implement Weight#count for vector values in the FieldExistsQuery. (Pan Guixin)

* GITHUB#13454: MultiTermQuery returns null ScoreSupplier in cases where
  no query terms are present in the index segment (Mayya Sharipova)

* GITHUB#13431: Replace TreeMap and use compiled Patterns in Japanese UserDictionary. (Bruno Roustant)

* GITHUB#12941: Don't preserve auxiliary buffer contents in LSBRadixSorter if it grows. (Stefan Vodita)

* GITHUB#13175: Stop double-checking priority queue inserts in some FacetCount classes. (Jakub Slowinski)

* GITHUB#13538: Slightly reduce heap usage for HNSW and scalar quantized vector writers. (Ben Trent)

* GITHUB#12100: WordBreakSpellChecker.suggestWordBreaks now does a breadth first search, allowing it to return
  better matches with fewer evaluations (hossman)

* GITHUB#13582: Stop requiring MaxScoreBulkScorer's outer window from having at
  least INNER_WINDOW_SIZE docs. (Adrien Grand)

* GITHUB#13585: Lucene912PostingsFormat, the new default postings format, now
  only has 2 levels of skip data, which are inlined into postings instead of
  being stored at the end of postings lists. This translates into better
  performance for queries that need skipping such as conjunctions.
  (Adrien Grand)

* GITHUB#13581: OnHeapHnswGraph no longer allocates a lock for every graph node (Mike Sokolov)
