@@ -47,6 +47,8 @@ Improvements
 
 * GITHUB#12627: patch HNSW graphs to improve reachability of all nodes from entry points
 
+* GITHUB#13201: Better cost estimation on MultiTermQuery over few terms. (Michael Froh)
+
 Optimizations
 ---------------------
 
